desafio-3/src/App.css
#root {
  width: 100%;
}

.App {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.tasks-container {
  display: flex;
  width: 100%;
  max-width: 736px;
  flex-direction: column;
  padding: 2rem 0.625rem;
  gap: 0.25rem;
}

.task-counter-container {
  margin-bottom: 0.75rem;
}

.task-counter-container h2 {
  font-size: 1rem;
  font-weight: 500;
}

.task-counter-container span {
  padding: 1px 4px;
  font-weight: 400;
  font-size: 0.75rem;
  color: var(--white);
  background-color: #333333;
  border-radius: 50px;
}

.no-tasks-message-container {
  font-weight: 500;
  font-size: 1rem;
  text-align: center;
  color: var(--gray-500);
}

.no-tasks-message-container svg {
  margin-bottom: 2rem;
}

@media screen and (min-width: 768px) {
  .tasks-container {
    padding: 2rem 0rem;
  }
}

